# hit-their-student

./: CMakeLists.txt  C语言程序设计实验大作业反思报告.doc  README.md
purec/: core.c  core.h  main.c  ui.c  ui.h  utils.c  utils.h
src/: core.cpp  core.hpp  main.cpp  simple_vector.hpp  ui.cpp  ui.hpp
